--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,8 @@
   </div>
   <div class="col">
     <!-- Nuestras páginas -->
-     Router
+     <!-- <shared-home-page></shared-home-page>
+     <shared-about-page></shared-about-page> -->
+     <router-outlet></router-outlet>
   </div>
 </div>
