--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -4,4 +4,5 @@
 <ul class="list-group">
   <li routerLink=""      routerLinkActive="active" class="list-group-item" [routerLinkActiveOptions]="{ exact: true }">Home Page</li>
   <li routerLink="about" routerLinkActive="active" class="list-group-item">About Page</li>
+  <li routerLink="contact" routerLinkActive="active" class="list-group-item">Contact Page</li>
 </ul>
