--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -2,7 +2,10 @@
 <hr>
 
 <ul class="list-group">
-  <li routerLink=""      routerLinkActive="active" class="list-group-item" [routerLinkActiveOptions]="{ exact: true }">Home Page</li>
-  <li routerLink="about" routerLinkActive="active" class="list-group-item">About Page</li>
-  <li routerLink="contact" routerLinkActive="active" class="list-group-item">Contact Page</li>
+  <li routerLink=""                     routerLinkActive="active" class="list-group-item" [routerLinkActiveOptions]="{ exact: true }">Home Page</li>
+  <li routerLink="about"                routerLinkActive="active" class="list-group-item">About Page  </li>
+  <li routerLink="contact"              routerLinkActive="active" class="list-group-item">Contact Page</li>
+  <li routerLink="countries/by-capital" routerLinkActive="active" class="list-group-item">Por capital </li>
+  <li routerLink="countries/by-country" routerLinkActive="active" class="list-group-item">Por país    </li>
+  <li routerLink="countries/by-region"  routerLinkActive="active" class="list-group-item">Por region  </li>
 </ul>
