--- a/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -4,7 +4,7 @@
 <div class="row">
   <div class="col">
     <!-- SearchBox -->
-     <shared-search-box placeholder="Buscar por capital..."></shared-search-box>
+     <shared-search-box (onValue)="searchByCapital($event)" placeholder="Buscar por capital..."></shared-search-box>
   </div>
 </div>
 
