--- a/src/app/shared/components/search-box/search-box.component.html
+++ b/src/app/shared/components/search-box/search-box.component.html
@@ -1,1 +1,6 @@
-<input type="text" [placeholder]="placeholder" class="form-control">
+<input
+  type="text"
+  class="form-control"
+  [placeholder]="placeholder"
+  (keyup.enter)="emitValue( txtSearchInput.value )"
+  #txtSearchInput>
