--- a/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -11,8 +11,6 @@
 <div class="row">
   <div class="col">
     <hr>
-    <ul>
-      <li *ngFor="let country of countries"> {{ country.capital }} - {{country.population}} </li>
-    </ul>
+    <countries-country-table [countries]="countries"></countries-country-table>
   </div>
 </div>
