--- a/src/app/countries/pages/country-page/country-page.component.html
+++ b/src/app/countries/pages/country-page/country-page.component.html
@@ -1,1 +1,40 @@
-<p>country-page works!</p>
+
+<ng-template #loading>
+  <div class="alert alert-info text-center">
+    Espere por favor
+  </div>
+</ng-template>
+
+<div *ngIf="country; else loading">
+  <div class="row">
+    <div class="col-12">
+      <h2>País: <strong> {{ country.name.common }} </strong></h2>
+      <hr>
+    </div>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-4">
+    <h3>Bandera</h3>
+    <img [src]="country?.flags?.svg" [alt]="country?.name?.common" class="img-thumbnail">
+  </div>
+  <div class="col">
+    <h3>Información</h3>
+    <ul class="list-group">
+      <li class="list-group-item"> <strong>Población</strong> {{ country?.population | number }}</li>
+    </ul>
+    <ul class="list-group">
+      <li class="list-group-item"> <strong>Código:</strong> {{ country?.ccn3| number }}</li>
+    </ul>
+  </div>
+</div>
+
+<div class="row mt-2">
+  <div class="col">
+    <h3>Traducciones</h3>
+    <div class="d-flex flex-wrap">
+      <span *ngFor="let translation of translations" class="badge bg-primary m-1"> {{ translation.common }} </span>
+    </div>
+  </div>
+</div>
