--- a/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -14,7 +14,7 @@
 <div class="row">
   <div class="col">
     <hr>
-    <shared-loading-spinner></shared-loading-spinner>
+    <shared-loading-spinner *ngIf="isLoading"></shared-loading-spinner>
     <countries-country-table [countries]="countries"></countries-country-table>
   </div>
 </div>
