--- a/src/app/shared/components/search-box/search-box.component.html
+++ b/src/app/shared/components/search-box/search-box.component.html
@@ -1,6 +1,7 @@
+<!-- (keyup.enter)="emitValue( txtSearchInput.value )" -->
 <input
   type="text"
   class="form-control"
   [placeholder]="placeholder"
-  (keyup.enter)="emitValue( txtSearchInput.value )"
+  (keyup)="onKeyPress( txtSearchInput.value)"
   #txtSearchInput>
