feat: optimization - search for region

--- a/src/app/countries/pages/by-country-page/by-country-page.component.html
+++ b/src/app/countries/pages/by-country-page/by-country-page.component.html
@@ -5,7 +5,7 @@
   <div class="col">
     <!-- SearchBox -->
      <shared-search-box
-      (onValue)="searchByCountry($event)"
+      (onDebounce)="searchByCountry($event)"
       placeholder="Buscar por país..."
       ></shared-search-box>
   </div>
