--- a/src/app/countries/pages/by-region-page/by-region-page.component.html
+++ b/src/app/countries/pages/by-region-page/by-region-page.component.html
@@ -2,12 +2,19 @@
 <hr>
 
 <div class="row">
-  <div class="col">
+  <div class="col text-center">
     <!-- SearchBox -->
-     <shared-search-box
-      (onValue)="searchByRegion($event)"
+     <!-- <shared-search-box
+      (onDebounce)="searchByRegion($event)"
       placeholder="Buscar por región..."
-      ></shared-search-box>
+      ></shared-search-box> -->
+      <button
+        *ngFor="let region of regions"
+        class="btn mx-2"
+        [ngClass]="{ 'btn-outline-primary': selectedRegion === region }"
+        (click)="searchByRegion(region)">
+        {{region}}
+      </button>
   </div>
 </div>
 
