--- a/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -7,6 +7,7 @@
     <!-- (onValue)="searchByCapital($event)" -->
      <shared-search-box
       (onDebounce)="searchByCapital($event)"
+      [initialValue]="initialValue"
       placeholder="Buscar por capital..."
       ></shared-search-box>
   </div>
