--- a/src/app/countries/pages/by-country-page/by-country-page.component.html
+++ b/src/app/countries/pages/by-country-page/by-country-page.component.html
@@ -6,6 +6,7 @@
     <!-- SearchBox -->
      <shared-search-box
       (onDebounce)="searchByCountry($event)"
+      [initialValue]="initialValue"
       placeholder="Buscar por país..."
       ></shared-search-box>
   </div>
@@ -14,6 +15,7 @@
 <div class="row">
   <div class="col">
     <hr>
+    <shared-loading-spinner *ngIf="isLoading"></shared-loading-spinner>
     <countries-country-table [countries]="countries"></countries-country-table>
   </div>
 </div>
